add UI and triggers

--- a/pushbox.html
+++ b/pushbox.html
@@ -6,11 +6,13 @@
 </head>
 <body>
 	<div class="game-container">
-		<canvas id="bot-canvas" width="416px" height="384px">
+		<div>
+			<canvas id="bot-canvas" width="416px" height="384px">
 			Your browser shall not pass! Download Google Chrome to view this.
-		</canvas>
-		<canvas id="stage-canvas" width="416px" height="384px"></canvas>
-		<canvas id="top-canvas" width="416px" height="384px"></canvas>
+			</canvas>
+			<canvas id="stage-canvas" width="416px" height="384px"></canvas>
+			<canvas id="top-canvas" width="416px" height="384px"></canvas>
+		</div>
 	</div>
 	<script type="text/javascript" src="pushbox.js"></script>
 </body>
