--- a/pushbox.html
+++ b/pushbox.html
@@ -14,6 +14,9 @@
 			<canvas id="top-canvas" width="416px" height="384px"></canvas>
 		</div>
 	</div>
+	<div class="introduce">
+		<p>“X”撤销上一步操作或取消对话，“R”回合重开，“Z”快速移动</p>
+	</div>
 	<script type="text/javascript" src="pushbox.js"></script>
 </body>
 </html>
