add game introduce

--- a/pushbox.html
+++ b/pushbox.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="introduce">
-		<p>“X”撤销上一步操作或取消对话，“R”回合重开，“Z”快速移动</p>
+		<p>操作：“X”撤销上一步操作或取消对话，“R”回合重开，“Z”快速移动<br/>游戏目标：找出所有关卡并通过</p>
 	</div>
 	<script type="text/javascript" src="pushbox.js"></script>
 </body>
